--- a/organizer_app/views/partials/header.pug
+++ b/organizer_app/views/partials/header.pug
@@ -10,6 +10,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
         li.nav-item
           a.nav-link(class=(title === 'Home') ? 'active' : '', href='/') Dashboard
         li.nav-item
+          a.nav-link(class=(title === 'Events') ? 'active' : '', href='/events') Events
+        li.nav-item
           a.nav-link(class=(title === 'Contact') ? 'active' : '', href='/contact') Contact
 
       form.d-flex
