--- a/organizer_app/views/events.pug
+++ b/organizer_app/views/events.pug
@@ -5,7 +5,7 @@ block content
     title #{title}
   style.
     h1 {
-      color: #3366cc;
+      color: #4CAF50;
       align-self: start;
       margin-left: 20%;
     }
@@ -45,7 +45,7 @@ block content
 
     .create-event-btn {
       display: inline-block;
-      background-color: #3366cc;
+      background-color: #4CAF50;
       color: #fff;
       padding: 10px 20px;
       border-radius: 5px;
@@ -57,7 +57,7 @@ block content
     }
 
     .create-event-btn:hover {
-      background-color: #003366;
+      background-color: #006600;
     }
 
     .no-events {
