--- a/organizer_app/views/create-event.pug
+++ b/organizer_app/views/create-event.pug
@@ -3,18 +3,68 @@ extends layout
 block content
   head
     title #{title}
-  body
+    style.
+      form.fm {
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background-color: #f9f9f9;
+      }
+
+      /* Styling for the label.lbls */
+      label.lbl {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+
+      /* Styling for the input.in fields */
+      input.in[type='text'],
+      input.in[type='date'] {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+      }
+
+      /* Styling for the submit button */
+      input.in[type='submit'] {
+        width: 100%;
+        padding: 10px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      /* Styling for the cancel link */
+      a.lnk {
+        display: block;
+        text-align: center;
+        margin-top: 10px;
+        text-decoration: none;
+        color: #4CAF50;
+      }
+
+      /* Styling for the cancel link on hover */
+      a:hover {
+        text-decoration: underline;
+      }
     h1 Create Event
-    form(action='/create-event', method='POST')
-      input(type='hidden', name='_csrf', value=_csrf)
-      label(for='eventName') Event Name:
-      input(type='text', name='eventName', required)
+    form.fm(action='/create-event', method='POST')
+      input.in(type='hidden', name='_csrf', value=_csrf)
+      label.lbl(for='eventName') Event Name:
+      input.in(type='text', name='eventName', required)
       br
-      label(for='date') Date:
-      input(type='date', name='date', required)
+      label.lbl(for='date') Date:
+      input.in(type='date', name='date', required)
       br
-      label(for='location') Location:
-      input(type='text', name='location', required)
+      label.lbl(for='location') Location:
+      input.in(type='text', name='location', required)
       br
-      input(type='submit', value='Create Event')
-    a(href='/events') Cancel
+      input.in(type='submit', value='Create Event')
+    a.lnk(href='/events') Cancel
