--- a/organizer_app/views/partials/header.pug
+++ b/organizer_app/views/partials/header.pug
@@ -8,9 +8,9 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
     #navbarColor01.collapse.navbar-collapse
       ul.navbar-nav.me-auto.mb-2.mb-lg-0
         li.nav-item
-          a.nav-link(class=(title === 'Home') ? 'active' : '', href='/') Dashboard
+          a.nav-link(class=(title === 'Home') ? 'active' : '', href='/') Home
         li.nav-item
-          a.nav-link(class=(title === 'Events') ? 'active' : '', href='/events') Events
+          a.nav-link(class=(title === 'Pass Events') ? 'active' : '', href='/pass-events') Pass Events
         li.nav-item
           a.nav-link(class=(title === 'Contact') ? 'active' : '', href='/contact') Contact
 
